# SuPLC_CtrlPlusDemo

./: README.md  build_version.mk  icons.mk  web_files.mk
Tools/: tools.mk
esp32_waveshare_eink213/main/: AllowedInputs.cpp  CMakeLists.txt  DeviceIO.cpp  DeviceIO.h  StatusBar.cpp  StatusBar.h  board.cpp  board.h  buttons.cpp  buttons.h  config.h  main.cpp  os.h
esp32_waveshare_eink213/main/Buttons/: button.cpp  button.h
esp32_waveshare_eink213/main/DataMigrations/: MigrateSettings.h  Settings_Initial.h
esp32_waveshare_eink213/main/Datetime/: Datetime.h  DatetimeService.cpp  DatetimeService.h
esp32_waveshare_eink213/main/Display/: Common.h  CursorCopying_0.cpp  CursorCopying_1.cpp  CursorDeleting_0.cpp  CursorDeleting_1.cpp  CursorDisabling_0.cpp  CursorDisabling_1.cpp  CursorMovingUpDown_0.cpp  CursorMovingUpDown_1.cpp  EditableElement.cpp  EditableElement.h  ElementCursor_0.cpp  ElementCursor_1.cpp  ElementCursor_2.cpp  Font.cpp  Font.h  InteractiveElement.cpp  InteractiveElement.h  LabeledElement.cpp  LabeledElement.h  ListBox.cpp  ListBox.h  LogsList.cpp  LogsList.h  MapIOIndicator.cpp  MapIOIndicator.h  RenderingService.cpp  RenderingService.h  ScrollBar.cpp  ScrollBar.h  display.cpp  display.h  drawing.h
esp32_waveshare_eink213/main/Hashing/: crc32.cpp  crc32.h
esp32_waveshare_eink213/main/Hotreload/: hotreload_service.cpp  hotreload_service.h  restart_counter.cpp  restart_counter.h
esp32_waveshare_eink213/main/HttpServer/: BaseController.cpp  BaseController.h  DisplayController.cpp  DisplayController.h  HttpServer.cpp  HttpServer.h  InputController.cpp  InputController.h  MainController.cpp  MainController.h  UpdateController.cpp  UpdateController.h  UriHelper.cpp  UriHelper.h  http_server.cpp  http_server.h
(+322 files in other folders)
